--- a/challenge-amigo-secreto_esp-main/style.css
+++ b/challenge-amigo-secreto_esp-main/style.css
@@ -36,11 +36,24 @@ body {
 
 /* Banner */
 .header-banner {
-    flex: 40%;
     display: flex;
+    flex-direction: columb;
     justify-content: center;
     align-items: center;
-    padding: 20px 0 0;
+    padding: 20px;
+    gap: 10px;
+}
+
+.logo-img {
+    max-width: 180px;
+    height: auto;
+    margin-bottom: 5px;
+}
+
+.img-amigo {
+    max-width: 220px;
+    height: auto;
+    margin-bottom: 5px;
 }
 
 /* Sección de entrada */
